# gltriangle

./: .gitmodules  CMakeLists.txt
inc/: config.h
src/: kd_core_unix.c  kd_core_win32.c  main.c
